@@ -1,4 +1,5 @@
 0.9-7
+- mapContour(): permit first argument to be a 'topo' object
 - mapPlot(): add 'axes' argument
 
 0.9-6
